--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
             <artifactId>spring-boot-starter-mail</artifactId> 
         </dependency>
         <dependency>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+                <groupId>jakarta.persistence</groupId>
+                <artifactId>jakarta.persistence-api</artifactId>
+        <version>2.2.3</version>
+        <scope>provided</scope>
+         </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.22</version> 
